fontawesome github logo imported, link added to github, CSS change to white font for readability. imported buyers/sellers pages to app.js to make sure navigation functions

--- a/estate-agent-website/src/CSS/Navbar.css
+++ b/estate-agent-website/src/CSS/Navbar.css
@@ -36,3 +36,9 @@
     align-self: center;
     margin-right: 20px;
 }
+
+.link {
+    color: white;
+    text-decoration: none;
+    display: block;
+}
